--- a/index.css
+++ b/index.css
@@ -1,31 +1,97 @@
-.div1{
+.ovdiv1{
     background-color: #1F2937;
     color: cornsilk;
+    padding: 0 20px;
+}
+.div1{
+    
+    display: flex;
+    align-items: baseline;
+    padding:0 10px;
+    
 }
 .div2{
-    padding: 20px 50px;
-    font-family:Georgia, 'Times New Roman', Times, serif;
-    justify-content:space-between;
     display: flex;
 }
-.span1{
-    float:right;
-    display: flex;
-    margin-top: -20px;
-}
-.span1 p{
-    margin: 20px 20px;
+
+.div2 p
+{
+    padding: 10px;
+    text-align: end
 }
 .div3{
-    display: block;
-    border-style: hidden;
-    border:50%;
+    display:flexbox;
+    flex-wrap: wrap;
+    box-sizing: content-box;
+    width:50%;
+    padding: 0px 0px 40px 30px;
+    margin: 20px 20px;
+}
+.button{
+    background-color: blue;
+    border: hidden;
+    color: cornsilk;
+    border-radius: 5PX;
+    padding: 5px;
+}
 
+.top{
+    display: flex;
+    justify-content: space-between;
+    align-items:center;
 }
 .div4{
     background-color: #E5E7EB;
-    color: ;
-    width: 200px;
-    height: 200px;
+    width:400px ;
+    height: 180px;
     float:right;
+    margin: 20px 20px;
+}
+.whitediv{
+    background-color: white;
+    padding: 10px 60px;
+}
+h3{
+    text-align: center;
+    color: #1F2937;
+}
+.imgdiv{
+width: 50px;
+height: 50px;
+border: 5px solid #3882f6;
+border-radius: 10px;
+}
+
+.divfor4{
+    display: flex;
+    justify-content: space-between;
+}
+.quote{
+    background-color: #E5E7EB;
+    display: flex;
+    flex-direction: column;
+    align-items:flex-end;
+    padding: 10px 40px;
+}
+.p{
+    font-size: 2em;
+}
+.cta{
+    display: flex;
+    margin: 30px;
+    border-radius: 10px;
+    padding: 10px 50px;
+    background-color: #3882f6;
+    color: #F9FAF8;
+}
+
+.sign{
+    align-self: center;
+    margin: 30px;
+    background-color: #3882f6;
+    border: 2px whitesmoke solid;
+    width: 80px;
+    height: 30px;
+    border-radius: 5px;
+    color: #F9FAF8;
 }
