--- a/index.css
+++ b/index.css
@@ -34,6 +34,7 @@ body{
     color: cornsilk;
     border-radius: 5PX;
     padding: 5px;
+
 }
 
 .top{
@@ -87,15 +88,20 @@ border-radius: 10px;
     color: #F9FAF8;
 }
 
-.sign{
+#sign{
     align-self: center;
     margin: 30px;
-    background-color: #3882f6;
+    background-color:#3882f6; 
     border: 2px whitesmoke solid;
     width: 80px;
     height: 30px;
     border-radius: 5px;
-    color: #F9FAF8;
+    /* color: #F9FAF8; */
+}
+.button:hover{
+    cursor:pointer;
+    text-transform: uppercase;
+    font-weight: bolder;
 }
 .imdiv p{
    box-sizing: border-box;
